added more koalas

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ _by @angrykoala_
 
 Software developer, koala fan and OS contributor.
 
+<img src="./static/koalas/octokoala.png" height="300">
+
+
 ---
 class: center, middle
 
