--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Wendigo And Other Monsters - angrykoala</title>
+    <title>Browsers, Automation and Koalas - angrykoala</title>
     <style>
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
       @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
@@ -21,10 +21,10 @@
     <textarea id="source">
 class: center, middle
 
-# Wendigo
-### And Other Monsters
-and koalas
-#### Introduction to Browser Automation
+# Browsers, Automation
+### and Koalas
+
+#### An ~~easy~~ introduction to Browser Automation
 
 _by @angrykoala_
 
@@ -38,7 +38,7 @@ _by @angrykoala_
 
 * https://github.com/angrykoala
 
-Software developer, koala fan and OS contributor.
+Software developer, koala fan,OS contributor.
 
 <img src="./static/koalas/octokoala.png" height="300">
 
@@ -81,7 +81,7 @@ count:false
 
 * **Services Automation**
 
-* **Testing**
+* **Testing!!**
 
 ---
 
@@ -89,9 +89,11 @@ count:false
 
 * **Performance.**
 
-* **Unreliability (race conditions, bugs, complexity, ...).**
+* **Unreliability.**
 
 * **APIs out of our control.**
+
+* **Race Conditions.**
 
 --
 count:false
@@ -102,7 +104,7 @@ count:false
 
 ---
 
-## Monstrous Tools
+## Koalafied Tools
 
 * **Selenium** - https://www.seleniumhq.org
 
